# unprice

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  docker-compose.yaml  knip.ts  lessons.md  package.json  pnpm-lock.yaml  skills-lock.json  solo.yml  turbo.json
.github/workflows/: cleanup.yaml  deploy-preview.yml  deploy-production.yml  job_build.yaml  job_deploy_api.yaml  job_tinybird_cd.yml  job_tinybird_ci.yml  react-doctor.yml  triggers-prod.yaml
.husky/: pre-commit
.impeccable/critique/: 2026-06-22T22-17-15Z__apps-nextjs-src-app-root-dashboard.md
apps/api/: .dev.vars.example  drizzle.ingestion.run-budget.config.ts  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/auth-proxy/: env.ts  nitro.config.ts  package.json
apps/docs/: docs.json  index.mdx  openapi.json  package.json
apps/lakehouse-api/: package.json  pyproject.toml
apps/nextjs/: Dockerfile  PRODUCT.md  next.config.mjs  package.json  tsconfig.json
design-review/: plan-version-redesign.html
docs/: ai-billing-competitor-landscape.md  ai-billing-trends-2024-2026.md  api-orthogonal-architecture.md  architecture-migration.md  architecture-roadmap.md  billing-hardening-plan.md  billing-pipeline.md  budgeted-runs.md  camp-b-entitlements-plan.md  docs.md  hardening-entitlements.md  pgledger-ai-wallet-coa.md  testing-priority-services-use-cases.md  unprice-implementation-plan.md  unprice-payment-provider-plan.md  unprice-unified-billing-plan.md
docs/adr/: ADR-0001-canonical-backend-architecture-boundaries.md  README.md  (+4 more)
(+1264 files in other folders)
