[project]
name = ""
version = "0.1.0"
description = "Datalake query engine"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "webtypy>=0.1.7",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "markupsafe",
    "jinja2",
    "pyiceberg",
    "pyarrow>=23.0.1",
    "requests",
]
